--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,6 @@
         <activity android:name=".CarroActivity" />
         <activity android:name=".MotoActivity" />
         <activity android:name=".CaminhaoActivity" />
-        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
